force-app/main/default/objects/Whatsapp_Message__c/Whatsapp_Message__c.object-meta.xml
<CustomObject>
    <label>Whatsapp Message</label>
    <nameField>
        <label>Whatsapp Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Whatsapp Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>