force-app/main/default/objects/Whatsapp_Message__c/fields/AgentStatus__c.field-meta.xml
<CustomField>
    <fullName>AgentStatus__c</fullName>
    <label>AgentStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>