force-app/main/default/objects/Whatsapp_Message__c/fields/Calculated_WT_allocated_time__c.field-meta.xml
<CustomField>
    <fullName>Calculated_WT_allocated_time__c</fullName>
    <label>Calculated WT allocated time</label>
    <type>DateTime</type>
</CustomField>