force-app/main/default/objects/Whatsapp_Message__c/fields/Call_Back_Request__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Request__c</fullName>
    <label>Call Back Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Business Hours</fullName>
            </value>
            <value>
                <fullName>Outside Business Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>