force-app/main/default/objects/Whatsapp_Message__c/fields/CustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatus__c</fullName>
    <label>CustomerStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>