force-app/main/default/objects/Whatsapp_Message__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <label>Delivered</label>
    <type>DateTime</type>
</CustomField>