force-app/main/default/objects/Whatsapp_Message__c/fields/Final_Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Final_Customer_Response__c</fullName>
    <label>Final Customer Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>