force-app/main/default/objects/Whatsapp_Message__c/fields/Final_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_NPS_Score__c</fullName>
    <label>Final NPS Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>