force-app/main/default/objects/Whatsapp_Message__c/fields/Fresh_Lead_Link_Click__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Lead_Link_Click__c</fullName>
    <label>Fresh Lead Link Click #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>