force-app/main/default/objects/Whatsapp_Message__c/fields/Fresh_Lead_Link_Click_Time_log__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Lead_Link_Click_Time_log__c</fullName>
    <label>Fresh Lead Link Click Time log</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>