force-app/main/default/objects/Whatsapp_Message__c/fields/Fresh_Lead_WA_Message__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Lead_WA_Message__c</fullName>
    <label>Fresh Lead WA Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>