force-app/main/default/objects/Whatsapp_Message__c/fields/monitorUCID__c.field-meta.xml
<CustomField>
    <fullName>monitorUCID__c</fullName>
    <label>monitorUCID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>