force-app/main/default/objects/Whatsapp_Message__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Whatsapp Message</relationshipLabel>
    <relationshipName>Whatsapp_Message</relationshipName>
    <type>Lookup</type>
</CustomField>