force-app/main/default/objects/Whatsapp_Message__c/fields/Quote_Link_Click_Time_Log__c.field-meta.xml
<CustomField>
    <fullName>Quote_Link_Click_Time_Log__c</fullName>
    <label>Quote Link Click Time Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>