force-app/main/default/objects/Whatsapp_Message__c/fields/Quote_WA_Message__c.field-meta.xml
<CustomField>
    <fullName>Quote_WA_Message__c</fullName>
    <label>Quote WA Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>