force-app/main/default/objects/Whatsapp_Message__c/fields/Reach_Time__c.field-meta.xml
<CustomField>
    <fullName>Reach_Time__c</fullName>
    <formula>IF( OR(ISNULL(WT_Agent_Allocated_Time__c),Calculated_WT_allocated_time__c &lt; WT_Agent_Allocated_Time__c) ,(Calculated_WT_allocated_time__c -  Responded_First_Time__c ) * 24 * 60, (WT_Agent_Allocated_Time__c - Responded_First_Time__c) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reach Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>