force-app/main/default/objects/Whatsapp_Message__c/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <label>Read</label>
    <type>DateTime</type>
</CustomField>