force-app/main/default/objects/Whatsapp_Message__c/fields/Responded_First_Time__c.field-meta.xml
<CustomField>
    <fullName>Responded_First_Time__c</fullName>
    <label>Responded First Time</label>
    <type>DateTime</type>
</CustomField>