force-app/main/default/objects/Whatsapp_Message__c/fields/Responded_Last_Time__c.field-meta.xml
<CustomField>
    <fullName>Responded_Last_Time__c</fullName>
    <label>Responded Last Time</label>
    <type>DateTime</type>
</CustomField>