force-app/main/default/objects/Whatsapp_Message__c/fields/Response_Msg__c.field-meta.xml
<CustomField>
    <fullName>Response_Msg__c</fullName>
    <label>Response Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>