force-app/main/default/objects/Whatsapp_Message__c/fields/Turn_Around_Time__c.field-meta.xml
<CustomField>
    <fullName>Turn_Around_Time__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Sent__c)),NOT(ISBLANK(Responded_First_Time__c ))), ( Responded_First_Time__c - Sent__c)*24*60, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Around Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>