force-app/main/default/objects/Whatsapp_Message__c/fields/UCL_Link_Click__c.field-meta.xml
<CustomField>
    <fullName>UCL_Link_Click__c</fullName>
    <label>UCL Link Click #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>