force-app/main/default/objects/Whatsapp_Message__c/fields/UCL_Link_Click_Time_log__c.field-meta.xml
<CustomField>
    <fullName>UCL_Link_Click_Time_log__c</fullName>
    <label>UCL Link Click Time log</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>