force-app/main/default/objects/Whatsapp_Message__c/fields/UCL_Sent_Status__c.field-meta.xml
<CustomField>
    <fullName>UCL_Sent_Status__c</fullName>
    <label>UCL Sent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>