force-app/main/default/objects/Whatsapp_Message__c/fields/UCL_WA_Message__c.field-meta.xml
<CustomField>
    <fullName>UCL_WA_Message__c</fullName>
    <label>UCL WA Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>