force-app/main/default/objects/Whatsapp_Message__c/fields/WT_Agent_Allocated_Time__c.field-meta.xml
<CustomField>
    <fullName>WT_Agent_Allocated_Time__c</fullName>
    <label>WT Agent Allocated Time</label>
    <type>DateTime</type>
</CustomField>